implement the supported mbc

--- a/GameBoyColorEmulator/CMakeLists.txt
+++ b/GameBoyColorEmulator/CMakeLists.txt
@@ -18,6 +18,20 @@ set(SOURCE_FILES
         Button.h
         MBC/MBC1.cpp
         MBC/MBC1.h
+        MBC/NoMBC.cpp
+        MBC/NoMBC.h
+        MBC/mbc2.cpp
+        MBC/mbc2.h
+        MBC/MBC3.cpp
+        MBC/MBC3.h
+        MBC/MBC4.cpp
+        MBC/MBC4.h
+        MBC/MBC5.cpp
+        MBC/MBC5.h
+        MBC/MBC6.cpp
+        MBC/MBC6.h
+        MBC/MBC7.cpp
+        MBC/MBC7.h
 )
 
 # Create the library
