--- a/Interfaces/CMakeLists.txt
+++ b/Interfaces/CMakeLists.txt
@@ -8,7 +8,7 @@ add_library(Interfaces INTERFACE
         IInputDevice.h
         IApu.h
         IStorage.h
-        IMemoryBankController.h
+        IMBC.h
 )
 
 target_include_directories(Interfaces INTERFACE
