refactored cpu optcodes, left to do is PREFIX_CB

--- a/GameBoyColorEmulator/CMakeLists.txt
+++ b/GameBoyColorEmulator/CMakeLists.txt
@@ -59,6 +59,8 @@ set(SOURCE_FILES
         StopCpuException.h
         Cpu/GbCpu.initR.cpp
         Cpu/GbCpu.initJ.cpp
+        Cpu/GbCpu.initC.cpp
+        Cpu/GbCpu.initPushPop.cpp
 )
 
 # Create the library
