Add Timer class and update Bus.cpp for GameBoyColorEmulator
A new Timer class is added to handle divider, timer counter,

--- a/GameBoyColorEmulator/CMakeLists.txt
+++ b/GameBoyColorEmulator/CMakeLists.txt
@@ -68,6 +68,9 @@ set(SOURCE_FILES
         Cartridges/CartridgeHeader.h
         Memory/Memory.cpp
         Memory/Bank.cpp
+        Timer.cpp
+        Timer.h
+        Timer.h
 )
 
 # Create the library
