Refactor DMA and improve PPU cycle handling
Implemented a dedicated DMA class for memory transfers and enhanced the PPU cycle handling mechanism. Adjusted CPU and Bus integration for this new DMA handling approach. Removed redundant code and fixed incorrect PPU cycle increments.

--- a/GameBoyColorEmulator/CMakeLists.txt
+++ b/GameBoyColorEmulator/CMakeLists.txt
@@ -73,6 +73,8 @@ set(SOURCE_FILES
         Timer.h
         PPU/Tile.hpp
         Serial.h
+        DMA/DMA.cpp
+        DMA/DMA.h
 )
 
 # Create the library
